spellcheck UK english

--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -127,7 +127,7 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
     Representing an ecological community as a network allows ecologists to address both community composition and the interactions between species~\citep{Roslin2016}. Identifying these interactions is critical to understanding species' effects on each other and predicting the community's response to perturbations~\citep{Bartomeus2016,Giron2018}. Importantly, information is conveyed both by the presence and \emph{absence} of links between species. Presences and absences are not, however, equally certain. An observed link definitely occurred, but there are multiple reasons why a given link may not be observed~\citep{Jordano2016}. 
 
 
-    First, ecological communities are stochastic~\citep{Gotelli2000}. Community composition and abundances vary over space~\citep{Baiser2012} and time~\citep{Olesen2011a}, leading to variation in encounter probabilites and hence interactions~\citep{Vazquez2005,Poisot2015,Graham2018}. Species must co-occur in order to be observed interacting, so any variation in co-occurrence will create variation in the set of observed interactions~\citep{Gravel2013,Graham2018}. Even assuming constant co-occurrence within a given study system, changing abundances can affect interactions if species which would otherwise interact become too rare to detect each other~\citep{Tylianakis2010,Jordano2016}. Moreover, interactions vary over space~\citep{Kitching1987,Baiser2012}, time~\citep{Kitching1987,Olesen2011a,Lopez2017}, between individuals~\citep{Pires2011a,Wells2013,Fodrie2015,Novak2015}, throughout life cycles~\citep{Clegg2018}, and with environmental conditions~\citep{Poisot2015}.
+    First, ecological communities are stochastic~\citep{Gotelli2000}. Community composition and abundances vary over space~\citep{Baiser2012} and time~\citep{Olesen2011a}, leading to variation in encounter probabilities and hence interactions~\citep{Vazquez2005,Poisot2015,Graham2018}. Species must co-occur in order to be observed interacting, so any variation in co-occurrence will create variation in the set of observed interactions~\citep{Gravel2013,Graham2018}. Even assuming constant co-occurrence within a given study system, changing abundances can affect interactions if species which would otherwise interact become too rare to detect each other~\citep{Tylianakis2010,Jordano2016}. Moreover, interactions vary over space~\citep{Kitching1987,Baiser2012}, time~\citep{Kitching1987,Olesen2011a,Lopez2017}, between individuals~\citep{Pires2011a,Wells2013,Fodrie2015,Novak2015}, throughout life cycles~\citep{Clegg2018}, and with environmental conditions~\citep{Poisot2015}.
 
 
     Beyond ``true" variation in network structure, several researchers have noted the effects of sampling intensity (e.g.,~\citealp{Martinez1999,Bluthgen2006,Jordano2016}). An assessment of the accumulation of interactions with increasing sampling effort suggests that it is even more challenging to correctly document interactions than species~\citep{Guimera2009,Poisot2012,Bartomeus2013,Jordano2016,Giron2018,Graham2018}. As a result, it has been proposed that interactions should be described probabilistically and network metrics computed accordingly~\citep{Bartomeus2013,Poisot2016}. Efforts in this vein usually take the form of creating model food webs that approximate observed empirical networks~\citep{Allesina2008,Guimera2009,Williams2010,Rohr2016}. These models may be based on species traits and/or abundances~\citep{Rohr2016,Weinstein2017,Weinstein2017a,Graham2018} or on simple abstract rules~\citep{Allesina2008,Guimera2009,Williams2010}. Such models provide an important ''reality check'' by allowing us to test hypotheses about the factors structuring ecological networks~\citep{Bartomeus2013,Weinstein2017,Weinstein2017a,Graham2018}. They can also allow us to estimate the numbers of interactions which have not been observed~\citep{Jordano2016,Weinstein2017a} and predict which unobserved interactions are most likely~\citep{Guimera2009,Bartomeus2013}. 
@@ -197,7 +197,7 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
 
     % \subsection*{Can't we just sample more?}
 
-    To sum up, the absence of an interaction on a given day could be because it was not feasible [$P(L_{ij})=0$], was feasible but did not occur because of local conditions during sampling ($P(X_{ij}|L_{ij}=1)=0$], or was feasible and occurred during sampling but could not be observed [$P(D_{ij}|X_{ij}=1,L_{ij}=1)=0$]. Note that some exteral factors can affect more than one level of uncertainty. For example, rare species are less likely to interact at a given site due to neutral processes~\citep{Jordano2016,Graham2018}. Interactions involving rare species are also less likely to be detected, unless more sampling effort is focused on rare than common species~\citep{Bartomeus2013,Jordano2016}. Thus, abundance affects both the probability of an interaction occurring at a particular site \emph{and} our ability to observe the interaction. 
+    To sum up, the absence of an interaction on a given day could be because it was not feasible [$P(L_{ij})=0$], was feasible but did not occur because of local conditions during sampling ($P(X_{ij}|L_{ij}=1)=0$], or was feasible and occurred during sampling but could not be observed [$P(D_{ij}|X_{ij}=1,L_{ij}=1)=0$]. Note that some external factors can affect more than one level of uncertainty. For example, rare species are less likely to interact at a given site due to neutral processes~\citep{Jordano2016,Graham2018}. Interactions involving rare species are also less likely to be detected, unless more sampling effort is focused on rare than common species~\citep{Bartomeus2013,Jordano2016}. Thus, abundance affects both the probability of an interaction occurring at a particular site \emph{and} our ability to observe the interaction. 
 
 
     When considering a metaweb, we wish to separate the unobserved interactions where $L_{ij}=0$ (i.e., unfeasible interactions) from interactions which could occur but did not at a particular sampling site or which occurred but were not detected (Fig.~\ref{conceptual_fig}). Unfortunately, this is not possible for most interactions (except those where we know an interaction is truly not feasible). That is, we generally do not know \emph{why} an interaction was not observed, only that it was not. An empirical ecologist will instead measure the marginal probability $P(L_{ij})=k_{ij}/n_{ij}$, where $k_{ij}$ is the number of observed interactions between species $i$ and $j$ and $n_{ij}$ the number of observed co-occurrences. Given this information, the question becomes: how can we reduce the uncertainty around our estimated interaction probability?
@@ -232,7 +232,7 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
 
     % All of the above methods for estimating the variance of $\lambda_{ij}$ include the number of samples $n$. This means that where the number of samples $n$ is very low (e.g., for rare species), there will be considerable uncertainty around our estimate of $\lambda_{ij}$. In Fig.~\ref{upper_limits}, we derive the Clopper-Pearson interval to explore how the estimate of $\lambda_{ij}$ (for true $\lambda=0$) varies with sample size. At a small sample size, the 95\% confidence interval is nearly (0, 1). To establish that species are not interacting with any acceptable certainty requires tens of observations of the two species co-occurring but not interacting. Most data sets will lack such extensive sampling across all species pairs, but we can still use a Bayesian approach to supplement the available data with other sources of information.
 
-    The basis of a Bayesian approach to modelling the probability that an interaction between species $i$ and $j$ occurs ($\lambda_{ij}$) is combining the maximum likelihood estimate (MLE) of $\lambda_{ij}$ with a prior distribution (described in the next section) and a normalising function. The MLE of $\lambda_{ij}$ can be modelled as a Bernoulli trial based on the number of observed interactions $k_ij$ and observed co-occurrances $n_{ij}$: $\lambda_{ij}=\frac{k_{ij}}{n_{ij}}$. The most appropriate prior distribution for $\lambda_{ij}$ is the beta distribution:
+    The basis of a Bayesian approach to modelling the probability that an interaction between species $i$ and $j$ occurs ($\lambda_{ij}$) is combining the maximum likelihood estimate (MLE) of $\lambda_{ij}$ with a prior distribution (described in the next section) and a normalising function. The MLE of $\lambda_{ij}$ can be modelled as a Bernoulli trial based on the number of observed interactions $k_ij$ and observed co-occurrences $n_{ij}$: $\lambda_{ij}=\frac{k_{ij}}{n_{ij}}$. The most appropriate prior distribution for $\lambda_{ij}$ is the beta distribution:
 
     \begin{equation}
           \lambda_{ij} \sim Beta(\alpha_{ij},\beta_{ij}) , \label{prior}
@@ -240,7 +240,7 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
 
         \noindent which has two shape parameters, $\alpha_{ij}$ and $\beta_{ij}$. 
 
-    The shape parameters, or hyperparameters, may be set to particular values or derived from some data (see below). Note that the hyperparameters may be set to the same values for all interactions, allowed to vary independently for all interactions, or may incorporate non-independence betwween interactions (e.g., when the shape of the prior distribution depends upon species' abundances or traits).
+    The shape parameters, or hyperparameters, may be set to particular values or derived from some data (see below). Note that the hyperparameters may be set to the same values for all interactions, allowed to vary independently for all interactions, or may incorporate non-independence between interactions (e.g., when the shape of the prior distribution depends upon species' abundances or traits).
     Combining the prior distribution with the MLE of $\lambda_{ij}$ derived from observed data, we obtain a posterior distribution that also follows a beta distribution with new hyperparameters $\alpha_{ij}'=\alpha_{ij}+k$ and $\beta_{ij}'=\beta_{ij}+n-k$ (\emph{Appendix S3}). The influence of the prior on the posterior distribution can be understood from these definitions: the difference between the posterior and the prior will increase with $k_{ij}$ and $n_{ij}-k_{ij}$. In other words, the distribution of $\lambda_{ij}$ for better-sampled pairs of species will rely less on the information used to build the prior distribution and more on the observed data. As $n_{ij}$ increases, the total uncertainty about $\lambda_{ij}$ will decrease (Fig.~\ref{Salix_pdfs_cdfs}). Note that these Bayesian models of $\lambda_{ij}$ do not distinguish between different sources of uncertainty except through the choice of prior.
 
     % R1 suggests removing this - could be in the SI I guess?
@@ -280,7 +280,7 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
 
       \textbf{Informative priors}
 
-        In most cases, we have some prior knowledge which we can use to inform uncertainty about interactions. One common example is the well-justified assumption that plants will not consume animals in a food web; excluding carnivorous plants it is not contentious to say that we are certain that unobserved links indicating plants feeding on animals truldy do not occur. Similarly, if we observed two species which are normally obligate mutualists co-occurring but not interacting, we would be very doubtful that a zero reflecting this interaction was true (i.e., high uncertainty about this zero). It is straightforward to extend the intuition behind these special cases to the full set of species in a network using trait-based models if the traits likely to affect interaction probabilities are known (e.g.,~\citet{Gravel2013,Bartomeus2016,Weinstein2017}). Informative models could also include information on abundances, phenological matching, co-occurrence, etc. as available~\citep{Jordano2016,Weinstein2017a,Graham2018}. Using an informative prior like these tailors the level of uncertainty surrounding each interaction, but involves many assumptions. There is, therefore, a risk of over-fitting with complicated trait-based models. Also note that researchers wishing to test whether a particular trait influences interaction probabilities should either exclude that trait from their prior or model the network using priors which include and exclude the trait of interest (as in~\citet{Weinstein2017,Weinstein2017a}).
+        In most cases, we have some prior knowledge which we can use to inform uncertainty about interactions. One common example is the well-justified assumption that plants will not consume animals in a food web; excluding carnivorous plants it is not contentious to say that we are certain that unobserved links indicating plants feeding on animals truly do not occur. Similarly, if we observed two species which are normally obligate mutualists co-occurring but not interacting, we would be very doubtful that a zero reflecting this interaction was true (i.e., high uncertainty about this zero). It is straightforward to extend the intuition behind these special cases to the full set of species in a network using trait-based models if the traits likely to affect interaction probabilities are known (e.g.,~\citet{Gravel2013,Bartomeus2016,Weinstein2017}). Informative models could also include information on abundances, phenological matching, co-occurrence, etc. as available~\citep{Jordano2016,Weinstein2017a,Graham2018}. Using an informative prior like these tailors the level of uncertainty surrounding each interaction, but involves many assumptions. There is, therefore, a risk of over-fitting with complicated trait-based models. Also note that researchers wishing to test whether a particular trait influences interaction probabilities should either exclude that trait from their prior or model the network using priors which include and exclude the trait of interest (as in~\citet{Weinstein2017,Weinstein2017a}).
 
 
         Alternatively, once can develop a prior based on the properties of a set of published networks (i.e., ``empirical" or ``reference Bayes"~\citet{Spiegelhalter2000}). While this type of prior does not allow for the prior distribution to vary between species pairs, it relies on only one assumption: that the focal network will have similar structural properties to those of published networks. For example, connectance ($C=N/S^2$, where $N$ is the number of interactions and $S$ is the number of species) is available for many networks. The distribution of these connectances can be used to predict the distribution of interaction probabilities in a new network. If we know the mean $\overline{C}$ and variance $\sigma_C^2$ of a distribution of connectances, then the hyperparameters are:
@@ -297,7 +297,7 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
         Note that, in this case, the prior distribution will be the same for all interaction probabilities. It is also possible to interpret other network properties (e.g., species degrees) in a similar network(s) as interaction probabilities and use these to create a prior (see \emph{Appendix S4} for a worked example). When using network summary statistics or degree distributions, it is important to consider whether the available information reflects what we truly believe about the network. Given the likelihood that most published networks are undersampled~\citep{Jordano2016}, it may be wise to include only the highest-quality networks available in a prior. Likewise, only the degree distribution for a similar system is likely to be a reasonable prior for a focal system. For example, if the focal system is large and contains a diverse array of species, it would be inappropriate to use a prior distribution drawn from a small network describing closely-related taxa (see \emph{Appendix S7} for a demonstration). Similarly, highly-aggregated networks containing nodes which represent whole classes or families are likely to have very different structures than networks where most nodes represent single species as aggregated nodes are likely to have more interaction partners than single species.
 
 
-        If a similar dataset is not available, it is also possible to use data from the study at hand to develop a prior (i.e., "approximate Bayes"~\citet{Gelmanblog})~\citep{Spiegelhalter2000}. This approach is used in medical testing~\citep{Spiegelhalter2000} and disease modelling~\citep{Leyland2005} using information from pilot studies and can easily be applied to ecological systems. Returning to the example of degree distributions, approximate Bayes allows us to use information from abundant and easily-sampled species to predict interaction probabilities for species which were observed only rarely. Despite its practicality, approximate Bayes has been criticized for being overly subjective~\citep{Berger2006} and because estimating hyperparameters from data serves as an approximation of some true hyperparameters which remain unknown~\citep{Gelmanblog}. We therefore encourage researchers to carefully consider whether external data or an appropriate trait model is available before opting for a prior based on some of their own data. Nevertheless, there are likely to be many situations where approximate Bayes provides the best way to describe the uncertainty in the dataset. We therefore illustrate this approach in the following empirical example.
+        If a similar dataset is not available, it is also possible to use data from the study at hand to develop a prior (i.e., "approximate Bayes"~\citet{Gelmanblog})~\citep{Spiegelhalter2000}. This approach is used in medical testing~\citep{Spiegelhalter2000} and disease modelling~\citep{Leyland2005} using information from pilot studies and can easily be applied to ecological systems. Returning to the example of degree distributions, approximate Bayes allows us to use information from abundant and easily-sampled species to predict interaction probabilities for species which were observed only rarely. Despite its practicality, approximate Bayes has been criticised for being overly subjective~\citep{Berger2006} and because estimating hyperparameters from data serves as an approximation of some true hyperparameters which remain unknown~\citep{Gelmanblog}. We therefore encourage researchers to carefully consider whether external data or an appropriate trait model is available before opting for a prior based on some of their own data. Nevertheless, there are likely to be many situations where approximate Bayes provides the best way to describe the uncertainty in the dataset. We therefore illustrate this approach in the following empirical example.
 
 
   \subsection*{An empirical example}
@@ -310,7 +310,7 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
 
     \subsubsection*{Computing the prior and posterior distributions}
 
-        To treat each interaction as a Bayesian probability, we will combine the observed data with a distribution based on prior information. As we lack a trait-based model or similar published network, we will use data from a single sub-network from the middle of the geographical distribution of the~\citet{Kopelke2017} dataset to inform our prior distribution. This simulates an empirical Bayes model using a pilot site to inform the prior distribution. A site in the middle of the geographic distribution was chosed in order to minimize bias due to the potential for a northern or southern site to exclude species with restricted ranges. To demonstrate how the use of data from a different system can affect the prior distribution and conclusions based on it, we repeated our analyses using priors derived from a much smaller system, which provided unreasonable distributions for interaction probabilites (\emph{Appendix S7}). 
+        To treat each interaction as a Bayesian probability, we will combine the observed data with a distribution based on prior information. As we lack a trait-based model or similar published network, we will use data from a single sub-network from the middle of the geographical distribution of the~\citet{Kopelke2017} dataset to inform our prior distribution. This simulates an empirical Bayes model using a pilot site to inform the prior distribution. A site in the middle of the geographic distribution was chosen in order to minimise bias due to the potential for a northern or southern site to exclude species with restricted ranges. To demonstrate how the use of data from a different system can affect the prior distribution and conclusions based on it, we repeated our analyses using priors derived from a much smaller system, which provided unreasonable distributions for interaction probabilities (\emph{Appendix S7}). 
 
 
         To obtain priors based on a single sub-network --Zillis in Graub\"{u}nchen, Switzerland-- we estimated frequencies of interactions based on the normalised degree of each species in each network component (see \emph{Appendix S8} for details and code). Using these prior parameters, we then estimated the posterior distributions of interaction probabilities $\lambda_{ij}$. For species without observed interactions ($n=0$), the posterior distribution is identical to the prior distribution. For species where $n>0$, we can update the prior distribution with data. If we consider only pairs of species which were observed co-occurring but not interacting, $k_{ij}$ is always 0 and only $n_{ij}$ will vary between species pairs. This gives $\alpha_{ij}'$=$\alpha_{ij}$ and $\beta_{ij}'$=$\beta_{ij} + n_{ij}$. We calculated posterior distributions and 95\% credible intervals (see function ``credible\_interval";~\emph{Appendix S9}) for species with $n$ ranging between 0 and 374, the total number of sites in our dataset. 
