added Dom comments to reply

--- a/manuscript/manual.bib
+++ b/manuscript/manual.bib
@@ -1,3 +1,12 @@
+@article{DesjardinsProulx2017,
+author={Desjardins-Proulx, Philippe and Laigle, Idaline and Poisot, Tim and Gravel, Dominique},
+journal={PeerJ},
+title={Ecological interactions and the Netflix problem},
+volume={5},
+year={2017},
+pages={e3644},
+doi={https://doi.org/10.7717/peerj.3644}
+}
 @article{Jensen1906,
 author={Jensen, J. L. W. V. },
 journal={Acta Math},
